# literatept

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  annotate.py  book.toml  enangled.toml  entangled.dhall  entangled.toml  image_rust.ppm  mdbook-entangled.css  pyproject.toml  pyrightconfig.json
.entangled/: filedb.json
.entangled/scripts/: make.lua
.entangled/syntax/: dhall.xml
.entangled/templates/dark/: theme.css
.entangled/templates/default/: template.html  theme.css
.entangled/templates/escience/: syntax.theme  template.html  theme.css
book/: 404.html  bibliography.html  full_source.html  index.html  print.html  searchindex.js  searchindex.json
docs/: index.html  theme.css
docs/css/: mods.css
lit/: SUMMARY.md  colours.md  full_source.md  geometry.md  images.md  index.md  main-app.md  path-tracing.md  ref.bib  scene.md  vectors.md
src/: colour.rs  main.rs  render_view.rs  vec3.rs
