# ~\~ language=TOML filename=Cargo.toml
# ~\~ begin <<lit/index.md|Cargo.toml>>[init]
[package]
name = "literatept"
version = "0.1.0"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
edition = "2018"

[profile.release]
opt-level = 3

[dependencies]
# ~\~ begin <<lit/index.md|dependencies>>[init]
rand = "0.8.5"
rayon = "1.5.3"
# ~\~ end

[dev-dependencies]
# ~\~ begin <<lit/index.md|dev-dependencies>>[init]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
# ~\~ end
# ~\~ end
