# ~\~ language=TOML filename=Cargo.toml
# ~\~ begin <<lit/index.md|Cargo.toml>>[init]
[package]
name = "literatept"
version = "0.2.0"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = 0
strip = "debuginfo"

[dependencies]
# ~\~ begin <<lit/index.md|dependencies>>[init]
rand = "0.8.5"
# ~\~ end
# ~\~ begin <<lit/index.md|dependencies>>[1]
rayon = "1.5.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
argh = "0.1.7"
# ~\~ end

[dev-dependencies]
# ~\~ begin <<lit/index.md|dev-dependencies>>[init]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
# ~\~ end
# ~\~ end
